# motcpp

./: .gitignore  CMakeLists.txt  README.md
docs/: index.md
docs/guides/: trackers.md
src/motion/: kalman_filter.cpp
src/trackers/: bytetrack.cpp
src/utils/: matching.cpp
wj_scripts/: CMakeLists.txt  build.MD  test_MOT17_data.cpp
